--- a/css/csssheet.css
+++ b/css/csssheet.css
@@ -9,9 +9,33 @@ body {
     color: white;
 }
 
+h1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 70px;
+    position: relative;
+    margin: 20px;
+    text-align: center;
+    font-family: "IBM Plex Sans", sans-serif; 
+}
+
+
 #carouselExampleIndicators {
     margin-bottom: 20px;
+    margin-top: 20px;
 }
+
+html, body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+   
+footer {
+    margin-top: auto;
+    background-color: rgb(66, 66, 66);
+  }
 
 
 /* comienzo del header */
@@ -83,6 +107,172 @@ header nav .menu .links, li {
 .dropdowncontent{
     min-width: 176px;
 }
+/* fin del header*/
+
+/* Seccion de paradox del index*/
+
+.paradoxiframe {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
+    column-gap: 20px;
+    row-gap: 20px;
+}
+
+/* Seccion de paradox del index*/
+
+/* comienzo del login*/
+
+.formulario {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-top: 50px;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 50px;
+}
+
+.formulario label {
+    display: block;
+    font-weight: 700;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.formulario .grupo {
+    position: relative;
+}
+
+.formularioinput{
+    width: 100%;
+    background: rgb(26, 71, 9);
+    color: white;
+    border: 3px solid transparent;
+    border-radius: 3px;
+    height: 45px;
+    line-height: 45;
+    padding: 0 40px 0 10px;
+    transition: .3s ease all;
+}
+
+.formularioinput:focus{
+   border: 3px solid rgb(240, 240, 240);
+   outline: none;
+    box-shadow: 3px 0 px 30 px rgba(163, 163, 163, 0.4);
+}
+
+.formularioerror{
+    font-size: 16px;
+    margin-bottom: 0;
+    display: none;
+}
+
+.formularioerror-activo{
+    display: block;
+}
+
+.formulariovalidacion{
+    position: absolute;
+    right: 10px;
+    bottom: 15px;
+    z-index: 100;
+    font-size: 16px;
+    opacity: 0; 
+}
+
+.checkbox{
+    margin-right: 10px;
+}
+
+.formgroupterminos,
+.formulariomensaje,
+.formgroup-btnenviar {
+    grid-column: span 2;
+}
+
+.formulariomensaje{
+    height: 45px;
+    line-height: 45px;
+    padding: 0 15px;
+    border-radius: 3px;
+    display: none;
+}
+
+.formulariomensaje-activo{
+    display: block;
+}
+
+
+.formulariomensaje p {
+    margin: 0;
+}
+
+.formgrup-btnenviar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.formulariobtn {
+    height: 45px;
+    line-height: 45px;
+    width: 30%;
+    background-color: rgb(26, 71, 9);
+    color: white;
+    font-weight: bold;
+    border:none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: .1s ease all;
+}
+
+.formulariobtn:hover {
+    box-shadow: 3px 0px 30px rgba(219, 219, 219, 0.7);
+}
+
+.formularioenviado{
+    font-size: 16px;
+    color: rgb(26, 71, 9);
+    display: none;
+}
+
+.formularioenviado-activo{
+    display: block;
+}
+
+.formgroup-correcto .formulariovalidacion{
+    color: rgb(14, 243, 71); 
+    opacity: 1;
+}
+
+.formgroup-incorrecto .formulariolabel {
+    color: red;
+}
+
+.formgroup-incorrecto .formulariovalidacion {
+    color: red;
+    opacity: 1;
+}
+
+.formgroup-incorrecto .formularioinput {
+    border: 3px solid red ;
+}
+
+
+/* final del login*/
+
+.poster{
+    display: flex;
+    justify-content: center;
+    background-image: url(/img/wallpaper\ 2\ bakcground.jpg);
+    background-size: cover;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
 
 /* comienzo del video */
 
@@ -95,8 +285,7 @@ header nav .menu .links, li {
 }
 
 video {
-    width: 720px;
-    height: 405px;
+    width: 50%;
 }
 
 .Maintext {
@@ -243,7 +432,7 @@ video {
 /* comienza el footer */
 
 .contacto {
-    background-color: rgb(66, 66, 66) ;
+    
     position: relative;
     display: grid;
     grid-template-columns: 20px 20px 20px;
@@ -255,10 +444,14 @@ video {
     "derechos derechos derechos";
     justify-content: space-evenly;
     justify-items: center;
-    padding-bottom: 50px;
+    padding-bottom: 32px;
     padding-top: 32px;
+    
 }
 
+footer {
+    background-color: rgb(66, 66, 66) ;
+}
 
 .titulo {
     grid-area: header;
@@ -301,12 +494,59 @@ i {
 }
 
 footer i{
-    color: green;
+    color: rgb(255, 255, 255);
 }
 
 
 /* termina el footer  */
 
 
-
 /* Responsive */
+
+@media screen and (max-width: 720px){
+    .formulario{
+        grid-template-columns: 1fr;
+    }
+    
+    .formgroupterminos,
+    .formulariomensaje,
+    .formgroup-btnenviar {
+    grid-column: span 1;
+    }
+
+    
+
+    .links {
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items:flex-start;
+    }
+    .contacto {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-areas: 
+    "header"
+    "steam"
+    "steamid"
+    "twitter" 
+    "twitterid"
+    "gmail"
+    "gmailid"
+    "derechos";
+    row-gap: 30px;
+    
+    }
+
+    video {
+    width: 80%;
+    }
+
+    .paradoxiframe > iframe {
+        width: 100%;
+    }
+
+    .poster > img{
+        width: 100%;
+    }
+}
+
