--- a/css/csssheet2.css
+++ b/css/csssheet2.css
@@ -6,74 +6,36 @@
 
 body {
     background-color: black;
+    color: white;
 }
 
-.carousel-example-interval {
-    max-width: 50%;
-    min-width: 1%;  
-}
-
-/*comienzo del header*/
-/* header {                            
-    background:rgb(66, 66, 66);
-}
-
-header nav {
+h1 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
+    font-size: 70px;
+    position: relative;
+    margin: 20px;
+    text-align: center;
+    font-family: "IBM Plex Sans", sans-serif; 
 }
 
-header .menu{
+
+html, body {
+    height: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 24px;
-    padding-top: 4px;
-}
+    flex-direction: column;
+  }
+   
+footer {
+    margin-top: auto;
+    background-color: rgb(66, 66, 66);
+  }
 
-header .menu .logo img{
-    width: 96px;
-}
 
-header nav .menu .links{
-    display: flex;
-}
+/* comienzo del header */
 
-header nav .menu .links a{
-    padding: 24px 24px ;
-    color: #fff;
-    text-decoration: none;
-    border-bottom: 4px solid transparent
-}
-
-header nav .menu .links a:hover{
-    border-bottom: #fff;
-    border-bottom: 4px solid
-}
-
-header nav .auth button {
-    padding: 24px 16px;
-    border: none;
-    background-color: rgb(143, 105, 52);
-    color: #fff;
-}
-
-header nav .auth button:hover{
-    background-color: rgb(209, 134, 35) ;
-    color: rgb(43, 42, 42);
-}
-
-header nav .auth button:active{
-    background-color: rgb(189, 150, 112);
-    color: black;
-} */
-/*final del header*/
-
-/* header 2 */
-/* header {
+header {
     background:rgb(66, 66, 66);
 }
 .links {
@@ -90,6 +52,7 @@ header nav .auth button:active{
 .links, li { 
     list-style: none;
 }
+
 
 .links, a {
     text-decoration: none;
@@ -116,25 +79,14 @@ header nav .auth button:active{
 
 .dropdown{
     position: relative;
-    display: inline-block
+    display: inline-block;
+    z-index: 100;
 }
 
 li {
     margin-top: 12px;
     margin-bottom: 12px;
-} */
-
-
-/* header nav .menu{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 24px;
-    padding-top: 4px;
 }
-
 
 header nav .menu .links, li { 
     list-style: none;
@@ -148,23 +100,300 @@ header nav .menu .links, li {
     
 }
 
-.juegos li {
-    float: left;
+.dropdowncontent{
+    min-width: 176px;
+}
+/* fin del header*/
+
+
+
+.poster{
+    display: flex;
+    justify-content: center;
+    background-image: url(/img/wallpaper\ 6\ background.jpg);
+    background-size: cover;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
-.tutoriales li {
-    float: left;
-} */
+/* comienzo del video */
 
-
-
+.videos {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+}
 
 video {
-    
-    width: 720px;
-    height: 405px;
+    width: 50%;
 }
 
 .Maintext {
     color: white;
 }
+
+/*comienza los tutoriales-hoi4*/
+
+.Informacion {
+    width: 90%;
+    max-width: 1500px;
+    margin: 20px auto;
+    padding: 32px;
+    display: grid;
+    grid-row-gap: 30px;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    background-image: url(/img/wallpaper\ 4\ background.jpg);
+    background-size: cover;
+
+}
+
+.Informacion > h2 {
+    font-size: 32px;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
+
+.Informacion > p{
+    font-size: 20px;
+    grid-column: span 2;
+}
+
+.Politica {
+    width: 90%;
+    max-width: 1500px;
+    margin: 20px auto;
+    padding: 32px;
+    display: grid;
+    grid-row-gap: 30px;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+    background-image: url(/img/wallpaper\ 4\ background.jpg) ;
+    background-size: cover;
+
+}
+
+.Politica > h2 {
+    font-size: 32px;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
+
+.Politica > p{
+    font-size: 20px;
+    grid-column: span 2;
+}
+
+.Politica > div {
+    grid-column: 3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+}
+
+.Economia {
+    width: 90%;
+    max-width: 1500px;
+    margin: 20px auto;
+    padding: 32px;
+    display: grid;
+    grid-row-gap: 30px;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    background-image: url(/img/wallpaper\ 4\ background.jpg) ;
+    background-size: cover;
+}
+
+.Economia > h2 {
+    font-size: 32px;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
+
+.Economia > p {
+    grid-column: span 3;
+    font-size: 20px;
+    
+}
+
+.Economia img {
+    grid-column-start: 2;
+}
+
+.Economia > div {
+    grid-column-start: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 20px;
+    
+}
+
+.Militar {
+    width: 90%;
+    max-width: 1500px;
+    margin: 20px auto;
+    padding: 32px;
+    display: grid;
+    grid-row-gap: 30px;
+    grid-template-columns: auto auto auto ;
+    grid-template-rows: auto auto auto;
+    background-image: url(/img/wallpaper\ 4\ background.jpg) ;
+    background-size: cover;
+}
+
+.Militar > h2 {
+    font-size: 32px;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
+
+.Militar > p {
+    grid-column: span 3;
+    font-size: 20px;
+}
+
+
+.Militar > div {
+    grid-column-start: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 20px;
+    
+}
+
+.Maintext img {
+    width:100%;
+}
+
+/*Terminan los tutoriales-hoi4*/
+/* comienza el footer */
+
+.contacto {
+    
+    position: relative;
+    display: grid;
+    grid-template-columns: 20px 20px 20px;
+    grid-template-rows: 50px 30px 100px;
+    grid-template-areas: 
+    "header header header"
+    "steam twitter gmail"
+    "steamid twitterid gmailid"
+    "derechos derechos derechos";
+    justify-content: space-evenly;
+    justify-items: center;
+    padding-bottom: 32px;
+    padding-top: 32px;
+    
+}
+
+footer {
+    background-color: rgb(66, 66, 66) ;
+}
+
+.titulo {
+    grid-area: header;
+    font-size: 30px;
+    
+}
+
+i {
+    
+    font-size: 25px;
+    
+}
+
+.simbolo1 {
+    grid-area: steam;
+}
+
+.simbolo2 {
+    grid-area: twitter;
+}
+
+.simbolo3 {
+    grid-area: gmail;
+}
+
+.texto1 {
+    grid-area: steamid;
+}
+
+.texto2 {
+    grid-area: twitterid;
+}
+
+.texto3 {
+    grid-area: gmailid;
+}
+
+.copyright {
+    grid-area: derechos;
+}
+
+footer i{
+    color: rgb(187, 107, 16);
+}
+
+
+/* termina el footer  */
+
+
+/* Responsive */
+
+@media screen and (max-width: 720px){
+    .formulario{
+        grid-template-columns: 1fr;
+    }
+    
+    .formgroupterminos,
+    .formulariomensaje,
+    .formgroup-btnenviar {
+    grid-column: span 1;
+    }
+
+    
+
+    .links {
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items:flex-start;
+    }
+    .contacto {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-areas: 
+    "header"
+    "steam"
+    "steamid"
+    "twitter" 
+    "twitterid"
+    "gmail"
+    "gmailid"
+    "derechos";
+    row-gap: 30px;
+    
+    }
+
+    video {
+    width: 80%;
+    }
+
+    .paradoxiframe > iframe {
+        width: 100%;
+    }
+
+    .poster > img{
+        width: 100%;
+    }
+}
+
