--- a/css/csssheet.css
+++ b/css/csssheet.css
@@ -123,7 +123,7 @@ header nav .menu .links, li {
 
 /* Seccion de paradox del index*/
 
-/* comienzo del login*/
+/* comienzo del registro*/
 
 .formulario {
     display: grid;
@@ -261,6 +261,28 @@ header nav .menu .links, li {
     border: 3px solid red ;
 }
 
+
+/* final del registro*/
+
+/* comienzo del login*/
+
+.formularioinputlogin{
+    width: 100%;
+    background: rgb(26, 71, 9);
+    color: white;
+    border: 3px solid transparent;
+    border-radius: 3px;
+    height: 45px;
+    line-height: 45;
+    padding: 0 40px 0 10px;
+    transition: .3s ease all;
+}
+
+.formularioinputlogin:focus{
+    border: 3px solid rgb(240, 240, 240);
+    outline: none;
+    box-shadow: 3px 0 px 30 px rgba(163, 163, 163, 0.4);
+}
 
 /* final del login*/
 
