--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./components/icons.scss";
 @import "./components/images.scss";
 @import "./components/videos.scss";
+@import "./components/forms.scss";
 
 @import "./layout/navbar.scss";
 @import "./layout/footer.scss";
